--- a/README.adoc
+++ b/README.adoc
@@ -1,18 +1,28 @@
-= Gradle Build Cache plugin
 :uri-teamcity: https://www.jetbrains.com/teamcity/[TeamCity]
 :uri-gradle-docs: https://docs.gradle.org/current/userguide
 :uri-gradle-build-cache: {uri-gradle-docs}/build_cache.html[Gradle Build Cache]
 :uri-gradle-hazelcast-plugin: https://github.com/gradle/gradle-hazelcast-plugin
 :uri-apache-license: https://www.apache.org/licenses/LICENSE-2.0.html[Apache License, Version 2.0]
-:uri-github-project: https://github.com/rodm/teamcity-gradle-build-cache-plugin/
-:uri-github-actions: {uri-github-project}/actions
-:uri-github-status: {uri-github-project}/workflows/Build/badge.svg
+:uri-github: https://github.com
+:uri-shields: https://img.shields.io
+:plugin-id: 9680-gradle-build-cache
+:plugin-name: teamcity-gradle-build-cache-plugin
+:uri-project: {uri-github}/rodm/{plugin-name}
+:uri-download: https://plugins.jetbrains.com/plugin/{plugin-id}
+:uri-version: {uri-shields}/jetbrains/plugin/v/{plugin-id}?label=TeamCity%20plugin
+:uri-downloads: {uri-shields}/jetbrains/plugin/d/{plugin-id}?label=Downloads
+:uri-build-history: {uri-project}/actions
+:uri-build-status: {uri-project}/workflows/Build/badge.svg
+
+= Gradle Build Cache plugin
 
 Gradle Build Cache is a {uri-teamcity} plugin that provides a build feature to enable the {uri-gradle-build-cache}.
 The plugin applies the {uri-gradle-hazelcast-plugin}[Gradle Hazelcast] settings plugin to enable build caching
 and starts a Hazelcast node on the TeamCity Server.
 
-image:{uri-github-status}?branch=master["Build Status", link="{uri-github-actions}"]
+image:{uri-build-status}?branch=master["Build Status", link="{uri-build-history}"]
+image:{uri-version}["Version", link={uri-download}]
+image:{uri-downloads}["Downloads", link="{uri-download}"]
 
 == Features
 
